src/app/globals.css
@import "tailwindcss";

:root {
  --background: #0a0a0a;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  font-family: sans-serif;
}

.center-root {
  display: flex;
  align-items: center;
  justify-content: center;
}

.center-vertical-root {
  display: flex;
  align-items: center;
}

.space-between-root {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

::-webkit-scrollbar {
  width: 2px;
  display: flex;
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.2);
  border-radius: 4px;
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

::-webkit-scrollbar {
  display: none;
  -ms-overflow-style: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.navigation-shadow {
  box-shadow: 0px 4px 20px 0px #fdc2ab33 inset, 2px 0px 30px 0px #f44319d4,
    1px 0px 12px 0px #fec95f40;
}

@keyframes slideDown {
  from {
    transform: translateY(-10px);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}
.animate-slideDown {
  animation: slideDown 1s ease-out;
}

